@@ -1,3 +1,7 @@
+Sun Jan 16 22:48:30 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>
+
+	* vm.c (rb_vm_start): now takes variable arguments.
+
 Sun Jan 16 22:35:00 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>
 
 	* intervm.c (rb_intervm_wormhole_peek): signaling pump can happen
